--- a/public/asst-1/styles.css
+++ b/public/asst-1/styles.css
@@ -37,12 +37,26 @@ p, li {
 .header {
     width: 100%;
     background-color: #0032A8;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     display: flex;
+    align-items: center;
     flex-flow: row wrap;
+    padding: 15px;
+
 }
 
-h1 {
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.one {
+    flex: 0 1 auto;
+}
+h1.heading {
+    text-align: center;
     font-size: 4rem;
     text-align: center;
     text-shadow: 2px 2px 10px red;
@@ -56,7 +70,7 @@ h2 {
 }
 
 .header img {
-    display: block;
+    display: flex;
     height: 60px;
     padding-top: 20.15px;
   }
